--- a/client/src/App.css
+++ b/client/src/App.css
@@ -80,3 +80,40 @@
     justify-content: center;
     margin-top: 10px;
 }
+
+.toggleBtnDiv{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+.modal {
+    position: fixed;
+    top: 20%;
+    left: 30%;
+    width: 50%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .modal-main {
+    background: white;
+    padding: 20px;
+    border-radius: 5px;
+  }
+  
+  .display-block {
+    display: block;
+  }
+  
+  .display-none {
+    display: none;
+  }
+
+  .addVacationBtnAdmin{
+    margin-top: 5px;
+    margin-right: 10px;
+  }
