--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,119 +1,198 @@
 .errorInput {
-    display: none;
-    color: red
+  display: none;
+  color: red
 }
 
 .loginBtn {
-    width: 150px;
-    background-color: #0D6EFD;
-    padding: 5px;
-    color: white;
-    border-radius: var(--bs-border-radius-lg);
-    border: 0px;
+  width: 150px;
+  background-color: #0D6EFD;
+  padding: 5px;
+  color: white;
+  border-radius: var(--bs-border-radius-lg);
+  border: 0px;
 }
 
 .pRegister {
-    color: rgb(197, 187, 187);
-    margin: 0px;
+  color: rgb(197, 187, 187);
+  margin: 0px;
 }
 
 .registerDiv {
-    margin: 10px;
+  margin: 10px;
 }
 
 .divCard {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
 }
 
 .cardVacation {
-    width: 450px;
-    margin: 10px;
-    height: 450px;
-    background-color: #f0f0f0;
-    padding: 5px;
+  width: 450px;
+  margin: 10px;
+  height: 450px;
+  background-color: #f0f0f0;
+  padding: 5px;
 }
 
 .CardHeader {
-    font-family: 'Dancing Script', cursive;
-    font-size: 50px;
-    margin-bottom: 10px;
+  font-family: 'Dancing Script', cursive;
+  font-size: 50px;
+  margin-bottom: 10px;
 }
 
 .cardImg {
-    height: 200px;
-    width: fit-content;
-    margin: 3px;
+  height: 200px;
+  width: fit-content;
+  margin: 3px;
 }
 
 .priceCard {
-    background-color: #0D6EFD;
-    color: aliceblue;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    width: 120px;
-    margin: 3px;
+  background-color: #0D6EFD;
+  color: aliceblue;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  width: 120px;
+  margin: 3px;
 }
 
 .vacationH1 {
-    text-align: center;
+  text-align: center;
 }
 
 .cardDescription {
-    padding: 3px;
-    min-height: 50px;
+  padding: 3px;
+  min-height: 50px;
 }
 
 .date {
-    background-color: deepskyblue;
-    color: white;
-    text-align: center;
-    font-weight: 700;
+  background-color: deepskyblue;
+  color: white;
+  text-align: center;
+  font-weight: 700;
 }
 
 .bi-calendar2-event {
-    margin-right: 5px;
+  margin-right: 5px;
 }
 
 .pagination {
-    justify-content: center;
-    margin-top: 10px;
+  justify-content: center;
+  margin-top: 10px;
 }
 
-.toggleBtnDiv{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
+.toggleBtnDiv {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
 }
 
 .modal {
-    position: fixed;
-    top: 20%;
-    left: 30%;
-    width: 50%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .modal-main {
-    background: white;
-    padding: 20px;
-    border-radius: 5px;
-  }
-  
-  .display-block {
-    display: block;
-  }
-  
-  .display-none {
-    display: none;
-  }
+  width: 100%;
+  height: 100%;
+  background-color: #8080807d;
+}
 
-  .addVacationBtnAdmin{
-    margin-top: 5px;
-    margin-right: 10px;
+.insidePopUpDiv {
+  position: fixed;
+  top: 20%;
+  left: 30%;
+  width: 50%;
+  border: 1px solid grey;
+  border-radius: 5px;
+}
+
+.modal-main {
+  background: white;
+  padding: 20px;
+  border-radius: 5px;
+}
+
+.display-block {
+  display: block;
+}
+
+.display-none {
+  display: none;
+}
+
+.addVacationBtnAdmin {
+  margin-top: 15px;
+  margin-right: 10px;
+}
+
+.cancelBtnPupup {
+  margin-top: 15px;
+  margin-right: 10px;
+}
+
+.addVacationAdminBtn {
+  margin-left: 15px;
+}
+
+.startDateInputPopup {
+  width: 150px;
+}
+
+.endDateInputPopup {
+  width: 150px;
+}
+
+.priceInputPopup {
+  width: 150px;
+}
+
+.deleteBtnPopUp{
+
+}
+
+.cardContent{
+  display: flex;
+  justify-content: space-between;
+}
+
+.followBtn {
+  background-color: #0078d0;
+  border: 0;
+  border-radius: 56px;
+  color: #fff;
+  cursor: pointer;
+  display: inline-block;
+  font-family: system-ui,-apple-system,system-ui,"Segoe UI",Roboto,Ubuntu,"Helvetica Neue",sans-serif;
+  font-size: 18px;
+  font-weight: 600;
+  outline: 0;
+  padding: 16px 21px;
+  position: relative;
+  text-align: center;
+  text-decoration: none;
+  transition: all .3s;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+.followBtn:before {
+  background-color: initial;
+  background-image: linear-gradient(#fff 0, rgba(255, 255, 255, 0) 100%);
+  border-radius: 125px;
+  content: "";
+  height: 50%;
+  left: 4%;
+  opacity: .5;
+  position: absolute;
+  top: 0;
+  transition: all .3s;
+  width: 92%;
+}
+
+.followBtn:hover {
+  box-shadow: rgba(255, 255, 255, .2) 0 3px 15px inset, rgba(0, 0, 0, .1) 0 3px 5px, rgba(0, 0, 0, .1) 0 10px 13px;
+  transform: scale(1.05);
+}
+
+@media (min-width: 768px) {
+  .followBtn {
+    padding: 16px 48px;
   }
+}
